# SparseVoxelOctree

./: LICENSE  README.md
3party/: glm.cpp  glm.h  glslUtility.cpp  glslUtility.h
3party/freeglut/lib/: freeglut.lib
3party/glm/: CMakeLists.txt
3party/glm/doc/: glm.docx
3party/glm/test/core/: core_func_common.cpp  core_func_geometric.cpp  core_func_integer.cpp  core_func_matrix.cpp  core_func_noise.cpp  core_func_packing.cpp  core_func_swizzle.cpp  core_func_vector_relational.cpp  core_setup_message.cpp  core_setup_precision.cpp  core_type_half.cpp  core_type_length.cpp  core_type_mat2x2.cpp  core_type_mat2x3.cpp  core_type_mat2x4.cpp  core_type_mat3x2.cpp  core_type_mat3x3.cpp  core_type_mat3x4.cpp  core_type_mat4x2.cpp  core_type_mat4x3.cpp  core_type_mat4x4.cpp  core_type_vec1.cpp  core_type_vec2.cpp  core_type_vec3.cpp  core_type_vec4.cpp
3party/glm/test/gtc/: gtc_constants.cpp  gtc_epsilon.cpp  gtc_half_float.cpp  gtc_matrix_access.cpp  gtc_matrix_transform.cpp  gtc_quaternion.cpp  gtc_random.cpp  gtc_swizzle.cpp  gtc_type_precision.cpp  gtc_type_ptr.cpp
3party/glm/test/gtx/: gtx_bit.cpp  gtx_matrix_query.cpp  gtx_multiple.cpp  gtx_quaternion.cpp  gtx_rotate_vector.cpp  gtx_string_cast.cpp  gtx_vector_angle.cpp
WIN/SVO/: SVO.sln  SVO.vcxproj  SVO.vcxproj.filters  cow.mtl
WIN/SVO/cornell/: cornell_box.mtl
WIN/SVO/crytek-sponza/: sponza.mtl
WIN/SVO/shader/: diagnostic.frag.glsl  fill3Dtex.com.glsl  leafStore.com.glsl  light.frag.glsl  light.geom.glsl  light.vert.glsl  mipmapNode.com.glsl  nodeAlloc.com.glsl  nodeFlag.com.glsl  nodeInit.com.glsl  pass.frag.glsl  pass.vert.glsl  renderVoxel.frag.glsl  renderVoxel.geom.glsl  renderVoxel.vert.glsl  shade.vert.glsl  shadowmap.frag.glsl  shadowmap.vert.glsl  voxelize.frag.glsl  voxelize.geom.glsl  voxelize.vert.glsl
doc/: alphademo.ppt  project_proposal.txt
src/: camera.cpp  camera.h  glRoutine.cpp  glRoutine.h  glslUtility.cpp  glslUtility.h  main.cpp  objLoader.cpp  objLoader.h  shader.cpp  shader.h  util.cpp  util.h  variables.h
